@@ -26,9 +26,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 /* glibc2 has these functions declared in <stdio.h>.  Avoid redeclarations.  */
 # if __GLIBC__ < 2
 
-int getline (char **_lineptr, size_t *_n, FILE *_stream);
+extern int getline (char **_lineptr, size_t *_linesize, FILE *_stream);
 
-int getdelim (char **_lineptr, size_t *_n, int _delimiter, FILE *_stream);
+extern int getdelim (char **_lineptr, size_t *_linesize, int _delimiter,
+		     FILE *_stream);
 
 # endif
 
