@@ -1,4 +1,4 @@
-# getnline.m4 serial 2
+# getndelim2.m4 serial 1
 dnl Copyright (C) 2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
@@ -6,10 +6,16 @@ dnl Public License, this file may be distributed as part of a program
 dnl that contains a configuration script generated by Autoconf, under
 dnl the same distribution terms as the rest of that program.
 
-AC_DEFUN([gl_GETNLINE],
+AC_DEFUN([gl_GETNDELIM2],
 [
-  dnl Prerequisites of lib/getnline.h.
+  gl_PREREQ_GETNDELIM2
+])
+
+# Prerequisites of lib/getndelim2.h and lib/getndelim2.c.
+AC_DEFUN([gl_PREREQ_GETNDELIM2],
+[
+  dnl Prerequisites of lib/getndelim2.h.
   AC_REQUIRE([gt_TYPE_SSIZE_T])
-  dnl Prerequisites of lib/getnline.c.
-  :
+  dnl Prerequisites of lib/getndelim2.c.
+  AC_REQUIRE([AC_HEADER_STDC])
 ])
