@@ -4,19 +4,17 @@ Read a line from a stream, with bounded memory allocation.
 Files:
 lib/getnline.h
 lib/getnline.c
-lib/getndelim2.c
 m4/getnline.m4
 m4/ssize_t.m4
 
 Depends-on:
-unlocked-io
+getndelim2
 
 configure.ac:
 gl_GETNLINE
 
 Makefile.am:
-lib_SOURCES += getnline.h
-EXTRA_DIST += getndelim2.c
+lib_SOURCES += getnline.h getnline.c
 
 Include:
 "getnline.h"
