@@ -1,3 +1,13 @@
+2003-07-18  Bruno Haible  <bruno@clisp.org>
+
+	* getndelim2.m4: New file.
+	* getline.m4 (AM_FUNC_GETLINE): Add AC_LIBOBJ of getndelim2.c and
+	invoke gl_PREREQ_GETNDELIM2.
+	(gl_PREREQ_GETLINE): Drop AC_HEADER_STDC, now done by
+	gl_PREREQ_GETNDELIM2.
+	* getnline.m4 (gl_GETNLINE): Drop AC_HEADER_STDC, now done by
+	gl_GETNDELIM2.
+
 2003-07-17  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am.in: Remove file.
